Random cleanups to behavior substitution