@@ -8,57 +8,52 @@ import javax.annotation.Nonnull;
 import javax.annotation.Nullable;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
-record BehaviorParameterReplacer<T>(Dynamic<?> source) {
-	public static <T> BehaviorParameterReplacer<T> from(Dynamic<?> source) {
-		return new BehaviorParameterReplacer<>(source);
-	}
-
+record BehaviorParameters<T>(Dynamic<?> source) {
 	@Nonnull
-	public Dynamic<T> apply(Dynamic<T> target) {
-		Dynamic<T> result = this.replaceInAny(target);
-		return result != null ? result : target;
+	public Dynamic<T> substitute(Dynamic<T> target) {
+		Dynamic<T> result = trySubstituteInAny(target);
+		return Objects.requireNonNullElse(result, target);
 	}
 
 	@Nullable
-	private Dynamic<T> replaceInAny(Dynamic<T> target) {
+	private Dynamic<T> trySubstituteInAny(Dynamic<T> target) {
 		Optional<String> string = target.asString().result();
 		if (string.isPresent()) {
-			String[] parameterRef = this.parseParameterRef(string.get());
+			String[] parameterRef = parseParameterRef(string.get());
 			if (parameterRef != null) {
-				Dynamic<T> parameter = this.lookupParameter(target.getOps(), parameterRef);
-				if (parameter != null) {
-					return parameter;
-				}
+				return lookupParameter(source, target.getOps(), parameterRef);
+			} else {
+				return null;
 			}
 		}
 
 		Optional<Map<Dynamic<T>, Dynamic<T>>> map = target.getMapValues().result();
 		if (map.isPresent()) {
-			return this.replaceInMap(target, map.get());
+			return substituteInMap(target, map.get());
 		}
 
 		return target.asStreamOpt().result()
-				.map(stream -> this.replaceInStream(target, stream))
+				.map(stream -> substituteInList(target, stream))
 				.orElse(null);
 	}
 
 	@Nullable
-	private Dynamic<T> replaceInMap(Dynamic<T> target, Map<Dynamic<T>, Dynamic<T>> targetMap) {
+	private Dynamic<T> substituteInMap(Dynamic<T> target, Map<Dynamic<T>, Dynamic<T>> targetMap) {
 		Dynamic<T> result = null;
 
 		for (Map.Entry<Dynamic<T>, Dynamic<T>> entry : targetMap.entrySet()) {
 			Optional<String> key = entry.getKey().asString().result();
 			if (key.isPresent()) {
-				Dynamic<T> replacedValue = this.replaceInAny(entry.getValue());
-				if (replacedValue != null) {
+				Dynamic<T> substitutedValue = trySubstituteInAny(entry.getValue());
+				if (substitutedValue != null) {
 					if (result == null) {
 						result = target;
 					}
-					result = result.set(key.get(), replacedValue);
+					result = result.set(key.get(), substitutedValue);
 				}
 			}
 		}
@@ -67,20 +62,20 @@ record BehaviorParameterReplacer<T>(Dynamic<?> source) {
 	}
 
 	@Nullable
-	private Dynamic<T> replaceInStream(Dynamic<T> target, Stream<Dynamic<T>> targetStream) {
-		MutableBoolean replaced = new MutableBoolean();
+	private Dynamic<T> substituteInList(Dynamic<T> target, Stream<Dynamic<T>> targetStream) {
+		MutableBoolean substituted = new MutableBoolean();
 
 		List<T> replacedList = targetStream.map(element -> {
-			Dynamic<T> replacedElement = this.replaceInAny(element);
-			if (replacedElement != null) {
-				replaced.setTrue();
-				return replacedElement.getValue();
+			Dynamic<T> substitutedElement = trySubstituteInAny(element);
+			if (substitutedElement != null) {
+				substituted.setTrue();
+				return substitutedElement.getValue();
 			} else {
 				return element.getValue();
 			}
-		}).collect(Collectors.toList());
+		}).toList();
 
-		if (replaced.isTrue()) {
+		if (substituted.isTrue()) {
 			DynamicOps<T> ops = target.getOps();
 			return new Dynamic<>(ops, ops.createList(replacedList.stream()));
 		} else {
@@ -98,9 +93,7 @@ record BehaviorParameterReplacer<T>(Dynamic<?> source) {
 	}
 
 	@Nullable
-	@SuppressWarnings("unchecked")
-	private <S> Dynamic<T> lookupParameter(DynamicOps<T> ops, String[] parameter) {
-		Dynamic<S> source = (Dynamic<S>) this.source;
+	private static <S, T> Dynamic<T> lookupParameter(Dynamic<S> source, DynamicOps<T> ops, String[] parameter) {
 		for (String key : parameter) {
 			Optional<Dynamic<S>> next = source.get(key).result();
 			if (next.isPresent()) {
@@ -109,11 +102,6 @@ record BehaviorParameterReplacer<T>(Dynamic<?> source) {
 				return null;
 			}
 		}
-
-		if (source.getOps() == ops) {
-			return (Dynamic<T>) source;
-		} else {
-			return source.convert(ops);
-		}
+		return source.convert(ops);
 	}
 }
